test/fail/non-theorems/Issue1/Predicates/20-foo.fof
%-----------------------------------------------------------------------------
% This file was generated automatically by Apia.
%-----------------------------------------------------------------------------

%-----------------------------------------------------------------------------
% The conjecture.

% The source Agda term was:
% Name: Issue1.Predicates.foo
% Role: prove
% Line: 20
fof(n10_88039882, conjecture, ((a) => (pA))).

% End conjecture.

%-----------------------------------------------------------------------------
% End TPTP file.
